--- a/lightning.pub/umbrel-app.yml
+++ b/lightning.pub/umbrel-app.yml
@@ -9,3 +9,9 @@ hiddenService: true
 backup:
   ignore:
     - "db/*.sqlite"
+gallery:
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
+defaultUsername: ""
+defaultPassword: ""
